# A wrapper CMakeLists.txt to use firmata

# Arduino-pico
set(ARDUINO_PICO_PATH "${CMAKE_CURRENT_SOURCE_DIR}/arduino-pico")
set(ARDUINO_CFLAGS
-Werror=return-type
-Wno-psabi
-iprefix "${ARDUINO_PICO_PATH}/"
@${ARDUINO_PICO_PATH}/lib/platform_def.txt
@${ARDUINO_PICO_PATH}/lib/rp2040/platform_def.txt
@${ARDUINO_PICO_PATH}/lib/rp2040/platform_inc.txt
@${ARDUINO_PICO_PATH}/lib/core_inc.txt
-march=armv6-m
-mcpu=cortex-m0plus
-mthumb
-ffunction-sections
-fdata-sections
-fno-exceptions
-fno-rtti
-std=gnu++17
-g
-pipe
-Os
-v  # FIXME: verbose is not necessary after debug.
-Wp,-v  # FIXME: verbose is not necessary after debug.
@${ARDUINO_PICO_PATH}/lib/core_wrap.txt
)

add_library(arduino-pico STATIC
# All source files ends with `.cpp` in arduino-pico/core.
# Recirsive glob without listing up all may work but leaves for now.
${ARDUINO_PICO_PATH}/cores/rp2040/lwip_wrap.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/RP2040Support.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/stdlib_noniso.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/PIOProgram.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/FS.cpp
# malloc-lock.cpp cannot compile but it is not necessary at this moment.
# ${ARDUINO_PICO_PATH}/cores/rp2040/malloc-lock.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/api/PluggableUSB.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/api/IPAddress.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/api/String.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/api/Common.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/api/Print.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/api/Stream.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/SerialUART.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/SerialUSB.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/delay.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/USB.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/main.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/Tone.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/wiring_shift.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/posix.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/Bootsel.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/SerialPIO.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/WMath.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/wiring_digital.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/psram.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/StackThunk.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/wiring_analog.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/Semihosting.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/libb64/cdecode.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/libb64/cencode.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/BluetoothDebug.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/cyw43_wrappers.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/lock.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/wiring_private.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/CoreMutex.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/sdkoverride/btstack_flash_bank.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/sdkoverride/btstack_run_loop_async_context.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/sdkoverride/inet_chksum.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/wiring_pulse.cpp
# TODO: Exclude FreeRTOS; use one at `contrib/FreeRTOS-Kernel.
# Firmata does not need FreeRTOS.
${ARDUINO_PICO_PATH}/cores/rp2040/freertos/freertos-main.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/freertos/freertos-lwip.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/freertos/variantHooks.cpp
${ARDUINO_PICO_PATH}/cores/rp2040/_freertos.cpp
)
target_compile_options(arduino-pico
PRIVATE
${ARDUINO_CFLAGS}
)

target_include_directories(arduino-pico
    PUBLIC ${ARDUINO_PICO_PATH}/include
    PUBLIC ${ARDUINO_PICO_PATH}/cores/rp2040
    PUBLIC ${ARDUINO_PICO_PATH}/variants/rpipico
)



#   "-MMD",
#   "-iprefix/home/yshimmyo/.arduino15/packages/rp2040/hardware/rp2040/5.4.4/",
# target_link_libraries(arduino-pico pico_stdlib FreeRTOS-Kernel-Heap4)  # FIXME: linking pico-sdk is from root CMakeLists.txt.
# target_link_libraries(Firmata arduino-pico)

# Arduino Libraries
add_library(wire STATIC ${ARDUINO_PICO_PATH}/libraries/Wire/src/Wire.cpp)
target_include_directories(wire PUBLIC
${ARDUINO_PICO_PATH}/libraries/Wire/src/
    PUBLIC ${ARDUINO_PICO_PATH}/include
    PUBLIC ${ARDUINO_PICO_PATH}/cores/rp2040
    PUBLIC ${ARDUINO_PICO_PATH}/variants/rpipico
)
target_compile_options(wire
PRIVATE
${ARDUINO_CFLAGS}
)

# Firmata
# Does AUX_SOURCE_DIRECTORY suits better rather than listing up sources, especially external projects?
add_library(Firmata STATIC
# Below source list was generated by
# find ConfigurableFirmata/{src,src/utility}/ -name '*.c' -or -name '*.cpp' 
ConfigurableFirmata/src/AnalogOutputFirmataEsp32.cpp
ConfigurableFirmata/src/StepperFirmata.cpp
ConfigurableFirmata/src/utility/OneWire.cpp
ConfigurableFirmata/src/utility/WiFiStream.cpp
ConfigurableFirmata/src/utility/AccelStepper.cpp
ConfigurableFirmata/src/utility/MultiStepper.cpp
ConfigurableFirmata/src/utility/FirmataStepper.cpp
ConfigurableFirmata/src/utility/BLEStream.cpp
ConfigurableFirmata/src/DigitalOutputFirmata.cpp
ConfigurableFirmata/src/FirmataFeature.cpp
ConfigurableFirmata/src/EspNetworkFunctions.cpp
ConfigurableFirmata/src/WifiCachingStream.cpp
ConfigurableFirmata/src/DhtFirmata.cpp
ConfigurableFirmata/src/FirmataScheduler.cpp
ConfigurableFirmata/src/OneWireFirmata.cpp
ConfigurableFirmata/src/DigitalInputFirmata.cpp
ConfigurableFirmata/src/AnalogOutputFirmata.cpp
ConfigurableFirmata/src/AnalogInputFirmata.cpp
ConfigurableFirmata/src/Frequency.cpp
ConfigurableFirmata/src/ArduinoSleep.cpp
ConfigurableFirmata/src/I2CFirmata.cpp
ConfigurableFirmata/src/SerialFirmata.cpp
ConfigurableFirmata/src/Encoder7Bit.cpp
ConfigurableFirmata/src/ConfigurableFirmata.cpp
ConfigurableFirmata/src/SpiFirmata.cpp
ConfigurableFirmata/src/FirmataExt.cpp
ConfigurableFirmata/src/AccelStepperFirmata.cpp
ConfigurableFirmata/src/EthernetClientStream.cpp
ConfigurableFirmata/src/FirmataReporting.cpp
ConfigurableFirmata/src/ServoFirmata.cpp
ConfigurableFirmata/src/utility/OneWire.cpp
ConfigurableFirmata/src/utility/WiFiStream.cpp
ConfigurableFirmata/src/utility/AccelStepper.cpp
ConfigurableFirmata/src/utility/MultiStepper.cpp
ConfigurableFirmata/src/utility/FirmataStepper.cpp
ConfigurableFirmata/src/utility/BLEStream.cpp
)
target_include_directories(Firmata BEFORE PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ConfigurableFirmata/src ${CMAKE_CURRENT_SOURCE_DIR}/ConfigurableFirmata/src/utility

    PUBLIC ${ARDUINO_PICO_PATH}/include
    PUBLIC ${ARDUINO_PICO_PATH}/cores/rp2040
    PUBLIC ${ARDUINO_PICO_PATH}/variants/rpipico
    PUBLIC ${ARDUINO_PICO_PATH}/libraries/Wire/src
)

target_compile_options(Firmata
PRIVATE
${ARDUINO_CFLAGS}
)
